# mandelbrot

./: Cargo.toml  brot
src/: main.rs
