[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Colin Suckow <csuckow99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9.0"
pixels = "0.2.0"
interpolation = "0.2.0"